<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Expenses Registration</string>
    <string name="expense_reg_access">Registro de Despesas</string>
    <string name="administration_access">Administração</string>
    <string name="back">Voltar</string>
    <string name="select">Selecione...</string>
    <string name="expense_description">Descrição da Despesa:</string>
    <string name="date_of_expense">Data da Despesa:</string>
    <string name="expense_reg">Registro de Despesa:</string>
    <string name="expense_type">Tipo de Despesa:</string>
    <string name="change">Modificar</string>
    <string name="value">Valor:</string>
    <string name="quantity">Quantidade:</string>
    <string name="reports">Relatórios</string>
    <string name="expense_type_reg">Manutenção de Tipos de Despesa</string>
    <string name="about">Sobre</string>
    <string name="delete_record">Apagar Registro</string>
    <string name="edit_record">Editar Registro</string>
    <string name="add_new">Adicionar Novo</string>
    <string name="expense_type_edition">Edição de Tipo de Despesa</string>
    <string name="start_time">Hora Inicial Aproximada:</string>
    <string name="end_time">Hora Final Aproximada:</string>
    <string name="total_expenses">Total de Despesas:</string>
    <string name="expense_details">Detalhamento de Despesas</string>
    <string name="clear_expense_history">Lipar Histórico de Despesa</string>
</resources>
