<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Container"
    android:layout_width="match_parent" 
    android:layout_height="fill_parent" android:orientation="vertical"
    android:background="@color/white" android:weightSum="1">
    <LinearLayout android:baselineAligned="true" android:layout_width="match_parent" android:weightSum="1" android:orientation="vertical" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginBottom="10dip">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/expense_reg" android:textColor="@color/black" android:textStyle="bold" android:layout_gravity="left" android:layout_marginTop="8dip"></TextView>    
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="vertical" android:weightSum="1"  android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_height="280dp">        
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/LinearLayout02" android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_marginBottom="5dip">
            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/TextView01" android:layout_height="wrap_content" android:textColor="@color/black" android:text="@string/date_of_expense" android:layout_gravity="top"></TextView>
            <TextView android:text="TextView" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/dateExpenseWasTakentextView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"></TextView>
            <Button android:text="@string/change" android:layout_height="40dip" android:id="@+id/changeDateButton" android:layout_width="match_parent"></Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="right" android:layout_marginBottom="5dip">
            <TextView android:textColor="@color/black" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/TextView02" android:layout_width="wrap_content" android:text="@string/expense_type" android:layout_gravity="center_vertical"></TextView>
            <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/typeExpenseSpinner" android:layout_marginLeft="10dip"><requestFocus></requestFocus></Spinner>            
        </LinearLayout>
        <LinearLayout
            android:id="@+id/LinearLayout04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginBottom="5dip">
            <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/expense_description" android:textColor="@color/black"></TextView>
            <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:inputType="textMultiLine" android:id="@+id/expenseDescription">                
            </EditText>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/LinearLayout05" android:layout_marginBottom="5dip">
            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/TextView03" android:layout_height="wrap_content" android:textColor="@color/black" android:text="@string/quantity"></TextView>
            <EditText android:layout_weight="1" android:inputType="number" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:id="@+id/QuantityText"></EditText>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/LinearLayout06" android:layout_marginBottom="5dip">
            <TextView android:layout_width="wrap_content" android:text="@string/value" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/TextView04" android:layout_height="wrap_content" android:textColor="@color/black"></TextView>
            <EditText android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:inputType="numberDecimal" android:id="@+id/ValueText"></EditText>
        </LinearLayout>       
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1" android:id="@+id/LinearLayout01" android:orientation="vertical" android:layout_gravity="top">
        <LinearLayout
            android:id="@+id/horizontalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <ImageButton android:layout_width="wrap_content" android:src="@drawable/back" android:layout_height="wrap_content" android:background="@color/white" android:layout_marginRight="90dip" android:id="@+id/BackButton"></ImageButton>
            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/confirm" android:id="@+id/ConfirmButton" android:background="@color/white"></ImageButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
